<?xml version="1.0"?>
<package format="2">
  <name>tcan_can_device</name>
  <version>0.0.0</version>
  <description>Fork of tcan_can eliminating the notion of a bus being the common container for can devices</description>
  <maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>message_logger</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>